--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,3 @@
-/* Fonts */
-@import url('https://fonts.googleapis.com/css?family=Nunito');
-
-/* Bootstrap */
-@import '~bootstrap/scss/bootstrap';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
